# Trek-Encyclopedia

./: .gitignore  chunk.py  embed.py  main.py  pyproject.toml  rag.py  scrape.py  scrape_memory_alpha.py  scrape_transcripts.py  search.py
